Add some project photo styles.

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -121,6 +121,13 @@ header {
 			}
 		}
 	}
+
+	.project-photo {
+		display: block;
+		max-height: 300px;
+		overflow: hidden;
+		margin-bottom: 10px; 
+	}
 }
 
 
