Set project photo height to the same as the width on load and on window resize.

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -124,7 +124,7 @@ header {
 
 	.project-photo {
 		display: block;
-		max-height: 300px;
+		height: 250px;
 		overflow: hidden;
 		margin-bottom: 10px; 
 	}
